# ChangeLog for dev-util/meld
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.74 2008/05/21 22:35:34 eva Exp $

  21 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  meld-1.1.5.1-r1.ebuild:
  don't create empty /usr/doc/meld, bug #206453

*meld-1.1.5.1-r1 (11 Feb 2008)

  11 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +meld-1.1.5.1-r1.ebuild:
  fix python eclass use, bug #207667

  18 Jan 2008; Rémi Cardona <remi@gentoo.org> meld-1.1.5.1.ebuild:
  add intltool dep (fixes bug #206238)

  06 Oct 2007; Tom Gall <tgall@gentoo.org> meld-1.1.5.1.ebuild:
  added ~ppc64

  30 Jul 2007; Mart Raudsepp <leio@gentoo.org>
  -files/meld-1.1.4-syntax.patch, -files/fix-po.patch,
  -meld-1.1.4-r1.ebuild:
  Remove old

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org> meld-1.1.5.1.ebuild:
  stable x86, bug 186773

  28 Jul 2007; Daniel Gryniewicz <dang@gentoo.org> meld-1.1.5.1.ebuild:
  Marked stable on amd64 for bug #186773

  28 Jul 2007; nixnut <nixnut@gentoo.org> meld-1.1.5.1.ebuild:
  Stable on ppc wrt bug 186773

  27 Jul 2007; Raúl Porcel <armin76@gentoo.org> meld-1.1.5.1.ebuild:
  alpha/ia64 stable wrt #186773

  27 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> meld-1.1.5.1.ebuild:
  Stable on sparc wrt #186773

*meld-1.1.5.1 (13 Jun 2007)

  13 Jun 2007; Mart Raudsepp <leio@gentoo.org> -meld-1.1.5.ebuild,
  +meld-1.1.5.1.ebuild:
  Version bump, for not including .svn directories in the (mirrored) tarball
  making it unnecessarily big

*meld-1.1.5 (11 Jun 2007)

  11 Jun 2007; Mart Raudsepp <leio@gentoo.org> +meld-1.1.5.ebuild:
  Version bump

  01 Jun 2007; <leio@gentoo.org> -meld-1.1.4.ebuild:
  Remove old

  01 Jun 2007; nixnut <nixnut@gentoo.org> meld-1.1.4-r1.ebuild:
  Stable on ppc wrt bug 179829

  31 May 2007; Christian Faulhammer <opfer@gentoo.org> meld-1.1.4-r1.ebuild:
  stable x86, bug 179829
