@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/meld
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.74 2008/05/21 22:35:34 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.75 2008/05/29 16:48:04 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> meld-1.1.5.1.ebuild,
+  meld-1.1.5.1-r1.ebuild:
+  python_mod_optimize is ROOT aware. Multilib love.
 
   21 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
   meld-1.1.5.1-r1.ebuild:
